fixed the page buttom with cut off

--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,7 @@ body{
     display:flex;
     flex-direction: column;
     align-items:center;
+    margin-bottom: 200px;
  
 
 }
@@ -320,11 +321,12 @@ textarea {
 
 
 .success-message {
-  margin-top: 150px;
+  margin-top: 180px;
   color:#020201;
   font-weight: bold;
   font-size:xx-large;
-  margin-left: 100px;
+  margin-left: 500px;
+  margin-bottom: 325px;
 }
 
 .error-message {
@@ -341,15 +343,17 @@ textarea {
 
 .no-personal-profile-msg{
   margin: 100px;
+  margin-left: 500px;
 }
 
 .profile-container {
   background-color: #f2f6a0;
-  border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(129, 30, 30, 0.1);
+  border-radius: 20px;
+  /* box-shadow: 0 2px 4px rgba(129, 30, 30, 0.1); */
   padding: 20px;
   max-width: 400px;
   margin: 20px;
+  margin-left: 500px;
   margin-bottom: 10px;
   text-align: center;
 }
